--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -174,7 +174,7 @@
 
 \title{The combinatorics of the permutahedron diagonals}
 
-\thanks{VP was partially supported by the French grants CHARMS (ANR-19-CE40-0017) and by the French--Austrian projects PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).}
+\thanks{VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).}
 
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
 \address{Institut Montpelli\'erain Alexander Grothendieck, Universit\'e de Montpellier, France}
@@ -305,7 +305,7 @@ corollary: left and right shifts for LA, decomposition of the cube associated to
 \label{sec:combinatorics}
 
 In this section, we study the combinatorics of hyperplane arrangements obtained as unions of generically translated copies of the braid arrangement.
-Specializing to two copies, we derive enumerative results on the diagonals of the permutahedra.
+%Specializing to two copies, we derive enumerative results on the diagonals of the permutahedra.
 
 %%%%%%%%%%%%%%%
 
