add ANR projects

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -174,7 +174,7 @@
 
 \title{The combinatorics of the permutahedron diagonals}
 
-\thanks{VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).}
+\thanks{BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).}
 
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
 \address{Institut Montpelli\'erain Alexander Grothendieck, Universit\'e de Montpellier, France}
